2005-01-17 Vivek Jain <jvivek@novell.com> 
	*install-shared.c : (org_gnome_popup_wizard): included a condition
	(null check) to fix a crash
	* shared-folder-common.c :(org_gnome_shared_folder_factory): some
	condition checks to avoid the possible crashes
	(get_container_id): included code to return top level container id if
	folder name is passed as null	

2005-01-13 Vivek Jain <jvivek@novell.com> 
	* share-folder.c :changed the function find_node to return user node
	corresponding to the mail address given.
	(add_clicked): added a condition so that user can't share folder to itself.
	(user_selected): modified to display proper rights when owner is selected.
	* share-folder-common.c : calling share_folder with a cnc in it.

2005-01-11 Vivek Jain <jvivek@novell.com> 
	killed compile time warnings by including suitable definitions
	and type casting widgets

2005-01-10 Vivek Jain <jvivek@novell.com> Included 

	* install-shared.c : opens up a wizard on reading a shared folder
	notification and installs shared folder at the recepient end.
	* share-folder-common.c : added 
	(refresh_folder_tree) : to refresh the folder tree when a folder is shared or
	a shared folder is created so that different icons are displayed
	(get_cnc): to get a connection 
	(get_container_id):to get the container id of the folder user selects
	* share-folder.c : minor changes to fix the crash
	* Makefile.am : including install-shared.c in sources
	* org-gnome-shared-folder.eplug.in : added a plugin to the e-plugin list for
	the message-read event

2004-12-15 Vivek Jain <jvivek@novell.com>

	Added (Create a shared folder) functionality in the plugin
	* org-gnome-shared-folder.eplug.in : added a plugin in the plugin list
	* share-folder-common.c : included functions to create a shared folder

2004-12-15  Vivek Jain <jvivek@novell.com>

	* shared-folder-common.c : (org_gnome_shared_folder_factory)
	* shared-folder.c : some whitespace changes, typecasting widgets,