@@ -1,3 +1,9 @@
+2005-01-18  Parthasarathi Susarla <sparthasarathi@novell.com>
+	
+	*install-shared.c
+	 (org_gnome_popup_wizard): displays the message without the
+	 mime headers
+
 2005-01-17 Vivek Jain <jvivek@novell.com> 
 	*install-shared.c : (org_gnome_popup_wizard): included a condition
 	(null check) to fix a crash
